// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when building association property should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "association",
}
`;

exports[`when building association property with weak reference should have source map for isWeak with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 9,
  "tokenText": "is weak",
}
`;

exports[`when building association property with weak reference should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "association",
}
`;

exports[`when building boolean property should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "bool",
}
`;

exports[`when building choice property should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "choice",
}
`;

exports[`when building common property should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "common",
}
`;

exports[`when building common property with extension override should have source map for isExtensionOverride with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "common extension",
}
`;

exports[`when building common property with extension override should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "common extension",
}
`;

exports[`when building currency property should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "currency",
}
`;

exports[`when building date property should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "date",
}
`;

exports[`when building datetime property should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "datetime",
}
`;

exports[`when building decimal property should have source map with line, column, text 1`] = `
Object {
  "baseKeyName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "decimalPlaces": Object {
    "column": 6,
    "line": 10,
    "tokenText": "decimal places",
  },
  "documentation": Object {
    "column": 6,
    "line": 6,
    "tokenText": "documentation",
  },
  "documentationInherited": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "fullPropertyName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "hasRestriction": Object {
    "column": 6,
    "line": 12,
    "tokenText": "max value",
  },
  "isIdentityRename": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isOptional": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isOptionalCollection": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isPartOfIdentity": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isQueryableOnly": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isRequired": Object {
    "column": 6,
    "line": 8,
    "tokenText": "is required",
  },
  "isRequiredCollection": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "maxValue": Object {
    "column": 6,
    "line": 12,
    "tokenText": "max value",
  },
  "mergeTargetedBy": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "metaEdId": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "metaEdName": Object {
    "column": 12,
    "line": 5,
    "tokenText": "PropertyName",
  },
  "minValue": Object {
    "column": 6,
    "line": 11,
    "tokenText": "min value",
  },
  "namespace": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "parentEntity": Object {
    "column": 2,
    "line": 2,
    "tokenText": "Domain Entity",
  },
  "parentEntityName": Object {
    "column": 16,
    "line": 2,
    "tokenText": "EntityName",
  },
  "referencedEntity": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "referencedNamespaceName": Object {
    "column": 12,
    "line": 5,
    "tokenText": "PropertyName",
  },
  "referencedType": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "roleName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "shortenTo": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "totalDigits": Object {
    "column": 6,
    "line": 9,
    "tokenText": "total digits",
  },
  "type": Object {
    "column": 4,
    "line": 5,
    "tokenText": "decimal",
  },
}
`;

exports[`when building descriptor property should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "descriptor",
}
`;

exports[`when building domain entity property should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "domain entity",
}
`;

exports[`when building domain entity property with weak reference should have source map for isWeak with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 8,
  "tokenText": "is weak",
}
`;

exports[`when building domain entity property with weak reference should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "domain entity",
}
`;

exports[`when building duration property should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "duration",
}
`;

exports[`when building entity property role name should have source map for contextName with line, column, text 1`] = `
Object {
  "column": 14,
  "line": 9,
  "tokenText": "ContextName",
}
`;

exports[`when building entity property with inherited documentation should have source map for documentationInherited with line, column, text 1`] = `
Object {
  "column": 6,
  "line": 6,
  "tokenText": "documentation",
}
`;

exports[`when building entity property with shortened context should have source map for shortenTo with line, column, text 1`] = `
Object {
  "column": 37,
  "line": 9,
  "tokenText": "ShortenToName",
}
`;

exports[`when building enumeration property should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "enumeration",
}
`;

exports[`when building identity entity property should have entity source map for identity properties with line, column, text 1`] = `
Array [
  Object {
    "column": 4,
    "line": 8,
    "tokenText": "is part of identity",
  },
]
`;

exports[`when building identity entity property should have source map for isPartOfIdentity with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 8,
  "tokenText": "is part of identity",
}
`;

exports[`when building inline common property should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "inline common",
}
`;

exports[`when building integer property should have source map with line, column, text 1`] = `
Object {
  "baseKeyName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "documentation": Object {
    "column": 6,
    "line": 6,
    "tokenText": "documentation",
  },
  "documentationInherited": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "fullPropertyName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "hasRestriction": Object {
    "column": 6,
    "line": 10,
    "tokenText": "max value",
  },
  "isIdentityRename": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isOptional": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isOptionalCollection": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isPartOfIdentity": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isQueryableOnly": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isRequired": Object {
    "column": 6,
    "line": 8,
    "tokenText": "is required",
  },
  "isRequiredCollection": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "maxValue": Object {
    "column": 6,
    "line": 10,
    "tokenText": "max value",
  },
  "mergeTargetedBy": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "metaEdId": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "metaEdName": Object {
    "column": 12,
    "line": 5,
    "tokenText": "PropertyName",
  },
  "minValue": Object {
    "column": 6,
    "line": 9,
    "tokenText": "min value",
  },
  "namespace": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "parentEntity": Object {
    "column": 2,
    "line": 2,
    "tokenText": "Domain Entity",
  },
  "parentEntityName": Object {
    "column": 16,
    "line": 2,
    "tokenText": "EntityName",
  },
  "referencedEntity": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "referencedNamespaceName": Object {
    "column": 12,
    "line": 5,
    "tokenText": "PropertyName",
  },
  "referencedType": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "roleName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "shortenTo": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "type": Object {
    "column": 4,
    "line": 5,
    "tokenText": "integer",
  },
}
`;

exports[`when building merge directive for defining association domain entity property should have source map for sourcePropertyPathStrings with line, column, text 1`] = `
Object {
  "column": 10,
  "line": 8,
  "tokenText": "Entity",
}
`;

exports[`when building merge directive for defining association domain entity property should have source map for targetPropertyPathStrings with line, column, text 1`] = `
Object {
  "column": 31,
  "line": 8,
  "tokenText": "TargetEntity",
}
`;

exports[`when building merge directive reference should have source map for sourcePropertyPathStrings with line, column, text 1`] = `
Object {
  "column": 10,
  "line": 9,
  "tokenText": "Entity",
}
`;

exports[`when building merge directive reference should have source map for targetPropertyPathStrings with line, column, text 1`] = `
Object {
  "column": 31,
  "line": 9,
  "tokenText": "TargetEntity",
}
`;

exports[`when building multiple merge directives for a shared simple type should have source map for first merge directive 1`] = `
Object {
  "sourceProperty": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "sourcePropertyChain": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "sourcePropertyPathStrings": Object {
    "column": 10,
    "line": 9,
    "tokenText": "SourcePropertyPath0",
  },
  "targetProperty": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "targetPropertyChain": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "targetPropertyPathStrings": Object {
    "column": 35,
    "line": 9,
    "tokenText": "TargetPropertyPath0",
  },
  "type": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
}
`;

exports[`when building multiple merge directives for a shared simple type should have source map for second merge directive 1`] = `
Object {
  "sourceProperty": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "sourcePropertyChain": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "sourcePropertyPathStrings": Object {
    "column": 10,
    "line": 10,
    "tokenText": "SourcePropertyPath1",
  },
  "targetProperty": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "targetPropertyChain": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "targetPropertyPathStrings": Object {
    "column": 35,
    "line": 10,
    "tokenText": "TargetPropertyPath1",
  },
  "type": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
}
`;

exports[`when building multiple merge directives should have source map for first merge directive 1`] = `
Object {
  "sourceProperty": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "sourcePropertyChain": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "sourcePropertyPathStrings": Object {
    "column": 10,
    "line": 9,
    "tokenText": "SourcePropertyPath0",
  },
  "targetProperty": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "targetPropertyChain": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "targetPropertyPathStrings": Object {
    "column": 35,
    "line": 9,
    "tokenText": "TargetPropertyPath0",
  },
  "type": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
}
`;

exports[`when building multiple merge directives should have source map for second merge directive 1`] = `
Object {
  "sourceProperty": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "sourcePropertyChain": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "sourcePropertyPathStrings": Object {
    "column": 10,
    "line": 10,
    "tokenText": "SourcePropertyPath1",
  },
  "targetProperty": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "targetPropertyChain": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "targetPropertyPathStrings": Object {
    "column": 35,
    "line": 10,
    "tokenText": "TargetPropertyPath1",
  },
  "type": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
}
`;

exports[`when building optional collection entity property should have source map for isOptionalCollection with line, column, text 1`] = `
Object {
  "column": 6,
  "line": 8,
  "tokenText": "is optional collection",
}
`;

exports[`when building optional entity property should have source map for isOptional with line, column, text 1`] = `
Object {
  "column": 6,
  "line": 8,
  "tokenText": "is optional",
}
`;

exports[`when building percent property should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "percent",
}
`;

exports[`when building queryable entity property  should have entity source map for queryable field with line, column, text 1`] = `
Array [
  Object {
    "column": 4,
    "line": 8,
    "tokenText": "is queryable only",
  },
]
`;

exports[`when building queryable entity property  should have source map for isQueryableOnly with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 8,
  "tokenText": "is queryable only",
}
`;

exports[`when building referential property with merge directives should have source map for mergeDirectives with line, column, text 1`] = `
Array [
  Object {
    "column": 4,
    "line": 8,
    "tokenText": "merge",
  },
]
`;

exports[`when building renamed identity entity property should have source map for baseKeyName with line, column, text 1`] = `
Object {
  "column": 30,
  "line": 11,
  "tokenText": "BaseName",
}
`;

exports[`when building renamed identity entity property should have source map for isIdentityRename with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 11,
  "tokenText": "renames identity property",
}
`;

exports[`when building required collection entity property should have source map for isRequiredCollection with line, column, text 1`] = `
Object {
  "column": 6,
  "line": 8,
  "tokenText": "is required collection",
}
`;

exports[`when building required entity properties should have source map with line, column, text for each property 1`] = `
Object {
  "baseKeyName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "documentation": Object {
    "column": 6,
    "line": 6,
    "tokenText": "documentation",
  },
  "documentationInherited": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "fullPropertyName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "hasRestriction": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isIdentityRename": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isOptional": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isOptionalCollection": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isPartOfIdentity": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isQueryableOnly": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isRequired": Object {
    "column": 6,
    "line": 8,
    "tokenText": "is required",
  },
  "isRequiredCollection": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isWeak": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "mergeDirectives": Array [],
  "mergeTargetedBy": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "metaEdId": Object {
    "column": 29,
    "line": 5,
    "tokenText": "[1]",
  },
  "metaEdName": Object {
    "column": 16,
    "line": 5,
    "tokenText": "PropertyName",
  },
  "namespace": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "parentEntity": Object {
    "column": 2,
    "line": 2,
    "tokenText": "Domain Entity",
  },
  "parentEntityName": Object {
    "column": 16,
    "line": 2,
    "tokenText": "EntityName",
  },
  "referencedEntity": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "referencedNamespaceName": Object {
    "column": 16,
    "line": 5,
    "tokenText": "PropertyName",
  },
  "referencedType": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "roleName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "shortenTo": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "type": Object {
    "column": 4,
    "line": 5,
    "tokenText": "association",
  },
}
`;

exports[`when building school year enumeration property should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "enumeration",
}
`;

exports[`when building shared decimal property should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "shared decimal",
}
`;

exports[`when building shared entity property should have source map for referencedType with line, column, text 1`] = `
Object {
  "column": 19,
  "line": 5,
  "tokenText": "PropertyName",
}
`;

exports[`when building shared integer property should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "shared integer",
}
`;

exports[`when building shared string property should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "shared string",
}
`;

exports[`when building short property should have source map with line, column, text 1`] = `
Object {
  "baseKeyName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "documentation": Object {
    "column": 6,
    "line": 6,
    "tokenText": "documentation",
  },
  "documentationInherited": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "fullPropertyName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "hasRestriction": Object {
    "column": 6,
    "line": 10,
    "tokenText": "max value",
  },
  "isIdentityRename": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isOptional": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isOptionalCollection": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isPartOfIdentity": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isQueryableOnly": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isRequired": Object {
    "column": 6,
    "line": 8,
    "tokenText": "is required",
  },
  "isRequiredCollection": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "maxValue": Object {
    "column": 6,
    "line": 10,
    "tokenText": "max value",
  },
  "mergeTargetedBy": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "metaEdId": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "metaEdName": Object {
    "column": 10,
    "line": 5,
    "tokenText": "PropertyName",
  },
  "minValue": Object {
    "column": 6,
    "line": 9,
    "tokenText": "min value",
  },
  "namespace": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "parentEntity": Object {
    "column": 2,
    "line": 2,
    "tokenText": "Domain Entity",
  },
  "parentEntityName": Object {
    "column": 16,
    "line": 2,
    "tokenText": "EntityName",
  },
  "referencedEntity": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "referencedNamespaceName": Object {
    "column": 10,
    "line": 5,
    "tokenText": "PropertyName",
  },
  "referencedType": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "roleName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "shortenTo": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "type": Object {
    "column": 4,
    "line": 5,
    "tokenText": "short",
  },
}
`;

exports[`when building string property should have source map with line, column, text 1`] = `
Object {
  "baseKeyName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "documentation": Object {
    "column": 6,
    "line": 6,
    "tokenText": "documentation",
  },
  "documentationInherited": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "fullPropertyName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "hasRestriction": Object {
    "column": 6,
    "line": 10,
    "tokenText": "max length",
  },
  "isIdentityRename": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isOptional": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isOptionalCollection": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isPartOfIdentity": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isQueryableOnly": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isRequired": Object {
    "column": 6,
    "line": 8,
    "tokenText": "is required",
  },
  "isRequiredCollection": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "maxLength": Object {
    "column": 6,
    "line": 10,
    "tokenText": "max length",
  },
  "mergeTargetedBy": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "metaEdId": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "metaEdName": Object {
    "column": 11,
    "line": 5,
    "tokenText": "PropertyName",
  },
  "minLength": Object {
    "column": 6,
    "line": 9,
    "tokenText": "min length",
  },
  "namespace": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "parentEntity": Object {
    "column": 2,
    "line": 2,
    "tokenText": "Domain Entity",
  },
  "parentEntityName": Object {
    "column": 16,
    "line": 2,
    "tokenText": "EntityName",
  },
  "referencedEntity": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "referencedNamespaceName": Object {
    "column": 11,
    "line": 5,
    "tokenText": "PropertyName",
  },
  "referencedType": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "roleName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "shortenTo": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "type": Object {
    "column": 4,
    "line": 5,
    "tokenText": "string",
  },
}
`;

exports[`when building time property should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "time",
}
`;

exports[`when building year property should have source map for type with line, column, text 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "year",
}
`;
